<resources>
    <string name="app_name" translatable="false">Tox Notify</string>
    <string name="quickstart_message">This App\'s purpose is to receive Firebase Notifications generated by your ToxProxy instance and forward them to the TRIfA App running on this device.</string>
    <string name="log_token">Send Token to TRIfA (for forwarding to ToxProxy)</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">Weather</string>

    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="lookandfeel_header">Look and Feel</string>
    <string name="theme">Choose theme</string>

    <string name="show_notifications">Show notifications</string>
    <string name="show_notifications_summary">for debugging, independent of TRIfA</string>

    <string name="prefer_fcm">Prefer FCM</string>
    <string name="prefer_fcm_summary">use Google FCM for push messages if selected. use Gotify if not selected</string>

</resources>
