<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.zoffcc.applications.pushmsg.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:text="@string/app_name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/app_info_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/informationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/quickstart_message"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/used_distributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text=""
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dummy1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@null" />

            <Button
                android:id="@+id/logTokenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="80"
                android:text="@string/log_token"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dummy2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="" />

            <ImageButton
                android:id="@+id/change_distributor_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="@color/blue_grey_700"
                android:scaleType="centerInside"
                android:src="@drawable/common_full_open_on_phone"
                android:textAllCaps="false" />

            <TextView android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="" />

            <ImageButton
                android:id="@+id/startSetting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:background="@color/blue_grey_700"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_settings_white_36"
                android:textAllCaps="false" />

            <TextView android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/DistributorsTextViewHeaderFcm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="available FCM Distributors:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/DistributorsTextViewFcm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="none"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/DistributorsTextViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="available UP Distributors:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/DistributorsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="none"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>